# openmc_data_to_json

./: .gitignore  Dockerfile  README.md  example_usage.py  pyproject.toml  setup.py
.github/workflows/: docker_ci.yml  python-publish.yml
openmc_data_to_json/: __init__.py  core.py  openmc-data-to-json
src/openmc_data_to_json/: __init__.py  core.py  openmc_data_to_json.py
tests/: Be9.h5  Li6.h5  Li7.h5  test_command_line_tool.py  test_python_api.py  tritium_production.json
